--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,10 +12,10 @@ services:
       retries: 5
 
   products-microservice:
-    build:
-      context: .
-      dockerfile: Dockerfile
-        # image: silverflin/product-catalog-microservice:latest
+    # build:
+    # context: .
+    # dockerfile: Dockerfile
+    image: silverflin/product-catalog-microservice:latest
     ports:
       - "0.0.0.0:50051:50051"
     networks:
